add transaction external id to prevent double spend and add unlock and transfer method
