# docs/swagger.json
@@ -87,6 +87,9 @@
                     },
                     "400": {
                         "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
                     }
                 }
             }
@@ -353,6 +356,40 @@
                 }
             }
         },
+        "/v1/open/wallet/unlockandtransfer": {
+            "post": {
+                "description": "unlock funds and transfer from one wallet to another",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "wallet"
+                ],
+                "summary": "UnlockAndTransfer Transaction",
+                "parameters": [
+                    {
+                        "description": "Transfer data",
+                        "name": "model",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/wallet.TransferModel"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    }
+                }
+            }
+        },
         "/v1/open/wallet/{id}": {
             "get": {
                 "description": "Get wallet infos by ID",
@@ -439,6 +476,9 @@
                 },
                 "currency": {
                     "type": "string"
+                },
+                "transactionExternaID": {
+                    "type": "string"
                 }
             }
         },
@@ -481,6 +521,9 @@
                     "type": "string"
                 },
                 "toWalletID": {
+                    "type": "string"
+                },
+                "transactionExternalID": {
                     "type": "string"
                 }
             }
